--- a/app/components/screens/home/Intro/Intro.module.scss
+++ b/app/components/screens/home/Intro/Intro.module.scss
@@ -1,6 +1,119 @@
 @import "../../../../assets/variables";
 
 .intro {
-    background-color: red;
-    max-width: 100%;
+    width: 100%;
+
+
+    .swiper-container {
+        position: relative;
+
+        img {
+            width: 100%;
+            height: 90vh;
+        }
+
+        .swiper-button-next-custom,
+        .swiper-button-prev-custom {
+            width: 40px;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #fff;
+            background: rgba(0, 0, 0, 0.5);
+            padding: 10px;
+            border-radius: 50%;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            z-index: 15;
+            cursor: pointer;
+        }
+
+        .swiper-button-next-custom {
+            right: 10px;
+        }
+
+        .swiper-button-prev-custom {
+            left: 10px;
+        }
+
+        .swiper-pagination-custom {
+            position: absolute;
+            bottom: 30px;
+            z-index: 10;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            justify-content: center;
+            gap: 5px;
+
+            .swiper-pagination-bullet {
+                background: #fff;
+                width: 10px;
+                height: 10px;
+                margin: 0 5px;
+                border-radius: 50%;
+                opacity: 0.7;
+            }
+
+            .swiper-pagination-bullet-active {
+                background: red;
+                opacity: 1;
+            }
+        }
+
+        strong {
+            width: 400px;
+            position: absolute;
+            left: 50px;
+            bottom: 6rem;
+            z-index: 15;
+            @include title;
+            color: $white;
+            line-height: 60px;
+        }
+    }
+}
+
+
+@media (max-width: 1199px) {
+
+    .intro {
+        width: 100%;
+
+        .swiper-container {
+            img {
+                width: 100%;
+                height: 50vh;
+            }
+
+            strong {
+                left: 20px;
+                bottom: 3rem;
+            }
+        }
+    }
+}
+
+
+@media (max-width: 991px) {
+
+    .intro {
+        width: 100%;
+
+        .swiper-container {
+            img {
+                width: 100%;
+                height: 50vh;
+            }
+
+            strong {
+                width: auto;
+                left: 10px;
+                bottom: 1rem;
+                line-height: 35px;
+            }
+        }
+    }
 }
