--- a/app/assets/_variables.scss
+++ b/app/assets/_variables.scss
@@ -10,6 +10,7 @@ $blue: #0693e3;
 $purple: #9b51e0;
 $amber: #fcb900;
 $orange: #ff6900;
+$shadow: 0px 4px 14px #000000;
 
 $radius: 1rem;
 $transition: .3s all ease;
