--- a/app/components/screens/home/Intro/Intro.module.scss
+++ b/app/components/screens/home/Intro/Intro.module.scss
@@ -3,6 +3,135 @@
 .intro {
     width: 100%;
 
+    .modalOpacity {
+        min-width: 100%;
+        min-height: 100%;
+        position: fixed;
+        background-color: $black;
+        top: 0;
+        right: 0;
+        left: 0;
+        z-index: 9999;
+        opacity: .7;
+        display: none;
+    }
+
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 9999;
+        background-color: #fff;
+        margin: 0 auto;
+        top: 10%;
+        left: 0;
+        right: 0;
+        width: 500px;
+        padding: .5rem;
+        box-shadow: 3px 3px 6px 0 rgba(0, 0, 0, .07);
+
+        &__header {
+            display: flex;
+            justify-content: end;
+
+            p {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                cursor: pointer;
+                font-size: 1.3rem;
+            }
+        }
+
+        &__body {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            margin: 1rem auto;
+            width: 90%;
+
+            &__title {
+                margin: 0 auto;
+                width: 90%;
+                text-align: center;
+                color: $black;
+                font-size: 1rem;
+                font-weight: 600;
+            }
+
+            img {
+                width: 100%;
+                height: auto;
+            }
+
+            &__link,
+            &__btn {
+                width: 100%;
+                height: 60px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 20px;
+                cursor: pointer;
+                font-size: 1.1rem;
+            }
+
+            &__link {
+                background-color: $black;
+                color: $white;
+                border: 2px solid $black;
+                transition: $transition;
+
+                i {
+                    text-shadow: $shadow;
+                }
+
+                &:hover {
+                    background-color: $white;
+                    color: $black;
+                }
+            }
+
+            &__btn {
+                background-color: $white;
+                color: $black;
+                border: 2px solid $black;
+                transition: $transition;
+
+                &:hover {
+                    background-color: $black;
+                    color: $white;
+                }
+            }
+        }
+
+        &__form {
+            width: 90%;
+            margin: 0 auto;
+            display: none;
+            text-align: center;
+            flex-direction: column;
+            margin-bottom: 2rem;
+            gap: 20px;
+
+            &__icon {
+                text-align: start;
+                cursor: pointer;
+            }
+
+            p {
+                color: $black;
+                font-size: 1rem;
+                font-weight: 600;
+            }
+
+            input {
+                width: 100%;
+                height: 60px;
+                border: 2px solid $black;
+                font-size: 1.2rem;
+            }
+        }
+    }
 
     .swiper-container {
         position: relative;
@@ -102,4 +231,17 @@
             }
         }
     }
+}
+
+
+.actModal {
+    display: block !important;
+}
+
+.formAct {
+    display: flex !important;
+}
+
+.modalNone {
+    display: none !important;
 }
