--- a/app/components/layout/header/Header.module.scss
+++ b/app/components/layout/header/Header.module.scss
@@ -156,6 +156,7 @@
             }
 
             &__list {
+                margin-top: 1rem;
                 display: flex;
                 flex-direction: column;
                 gap: 20px;
