--- a/app/components/screens/home/Intro/Intro.module.scss
+++ b/app/components/screens/home/Intro/Intro.module.scss
@@ -233,6 +233,14 @@
     }
 }
 
+@media (max-width: 767px) {
+    .intro {
+        .modal {
+            width: 95%;
+        }
+    }
+}
+
 
 .actModal {
     display: block !important;
