--- a/app/assets/_variables.scss
+++ b/app/assets/_variables.scss
@@ -24,8 +24,13 @@ $transition: .3s all ease;
         font-size: 1.6rem;
     }
 }
+
 @mixin content {
     font-size: 2rem;
+
+    @media only screen and (max-width: 1199px) {
+        font-size: 1.5rem;
+    }
 
     @media only screen and (max-width: 991px) {
         font-size: 1rem;
