--- a/app/assets/_variables.scss
+++ b/app/assets/_variables.scss
@@ -1,5 +1,5 @@
 $black: #242323;
-$gray: #abb8c3;
+$gray: #959595;
 $white: #fff;
 $pink: #f78da7;
 $red: #cf2e2e;
@@ -10,7 +10,7 @@ $blue: #0693e3;
 $purple: #9b51e0;
 $amber: #fcb900;
 $orange: #ff6900;
-$shadow: 0px 4px 14px #000000;
+$shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.12);
 
 $radius: 1rem;
 $transition: .3s all ease;
