--- a/app/components/screens/home/Products/Products.module.scss
+++ b/app/components/screens/home/Products/Products.module.scss
@@ -4,12 +4,11 @@
     padding: 0 0 100px;
 
     &__item {
-
         &__header {
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 2rem;
+            margin-bottom: 4rem;
 
             &__title {
                 display: flex;
@@ -38,6 +37,8 @@
                 align-items: center;
                 gap: 10px;
 
+                .btn__next2,
+                .btn__prev2,
                 .btn__next,
                 .btn__prev {
                     width: 40px;
@@ -55,13 +56,69 @@
 
         }
 
-        img {
-            width: 100%;
+        &__cart {
             height: 500px;
+            padding: .5rem;
+
+            &__item {
+                width: 100%;
+                height: 100%;
+                box-shadow: $shadow;
+                padding: 10px;
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+
+                &__img {
+                    width: 100%;
+                    height: 70%;
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+
+
+                p {
+                    color: $gray;
+                    font-size: 1.1rem;
+                    font-weight: 500;
+                }
+
+                b {
+                    color: $black;
+                    font-size: 1.1rem;
+                    font-weight: 600;
+                }
+
+                &__link {
+                    width: 100%;
+                    height: 60px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 20px;
+                    cursor: pointer;
+                    font-size: 1.1rem;
+                    background-color: $black;
+                    color: $white;
+                    border: 2px solid $black;
+                    transition: $transition;
+
+                    &:hover {
+                        background-color: $white;
+                        color: $black;
+                    }
+                }
+            }
         }
     }
 }
 
+.qw {
+    margin-top: 4rem;
+}
 
 @media only screen and (max-width: 767px) {
     .products {
@@ -69,6 +126,8 @@
 
         &__item {
             &__header {
+                margin-bottom: 2rem;
+
                 &__title {
                     gap: 10px;
 
@@ -81,6 +140,8 @@
 
                 &__btns {
 
+                    .btn__prev2,
+                    .btn__next2,
                     .btn__next,
                     .btn__prev {
                         width: 30px;
@@ -89,11 +150,10 @@
                 }
 
             }
-
-            img {
-                width: 100%;
-                height: 500px;
-            }
         }
+    }
+
+    .qw {
+        margin-top: 2rem;
     }
 }
