--- a/app/components/screens/home/Benefit/Benefit.module.scss
+++ b/app/components/screens/home/Benefit/Benefit.module.scss
@@ -59,7 +59,7 @@
         &__list {
             &__item {
                 width: 50%;
-                height: auto;
+                height: 250px;
             }
         }
     }
