--- a/app/components/layout/header/Header.module.scss
+++ b/app/components/layout/header/Header.module.scss
@@ -286,10 +286,10 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            gap: 20px;
+            gap: 5px;
             height: 90vh;
             overflow-y: scroll;
-            padding-bottom: 2rem;
+            padding: 2rem 0;
 
             &__lan {
                 display: flex;
