--- a/app/components/layout/header/Header.module.scss
+++ b/app/components/layout/header/Header.module.scss
@@ -289,7 +289,7 @@
             gap: 10px;
             height: 90vh;
             overflow-y: scroll;
-            padding: 2rem 0;
+            padding: 1rem 0 2rem;
 
             &__lan {
                 display: flex;
@@ -370,6 +370,26 @@
                     border: 1px solid $black;
                     background-color: $black;
                     margin-left: 10px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 575px) {
+    .header {
+        .menu {
+            padding: 0 1rem;
+
+            &__center {
+                align-items: start;
+
+                .header__nav__links__tel {
+                    margin-left: 0;
+                }
+
+                &__list {
+                    align-items: start;
                 }
             }
         }
