--- a/app/components/layout/header/Header.module.scss
+++ b/app/components/layout/header/Header.module.scss
@@ -384,6 +384,10 @@
             &__center {
                 align-items: start;
 
+                &__title {
+                    font-size: 1.5rem;
+                }
+
                 .header__nav__links__tel {
                     margin-left: 0;
                 }
