--- a/app/components/layout/footer/Footer.module.scss
+++ b/app/components/layout/footer/Footer.module.scss
@@ -145,7 +145,7 @@
 
                 &__asa {
                     color: $gray;
-                    @include title;
+                    font-size: 3rem;
                     font-weight: 600;
                 }
 
