--- a/app/components/layout/footer/Footer.module.scss
+++ b/app/components/layout/footer/Footer.module.scss
@@ -99,6 +99,10 @@
                 flex-direction: column;
                 gap: 10px;
 
+                img {
+                    object-fit: contain;
+                }
+
                 &__title {
                     color: $white;
                     font-size: 1rem;
