--- a/app/components/ui/Ellipse/Ellipse.module.scss
+++ b/app/components/ui/Ellipse/Ellipse.module.scss
@@ -1,3 +1,5 @@
+@import "../../../assets/variables";
+
 .ellipse__el {
     position: fixed;
     left: 0;
@@ -5,7 +7,7 @@
     width: 100%;
     height: 100vh;
     z-index: 1000;
-    background-color: #000;
+    background-color: $black;
     animation: loader 1.5s backwards;
 }
 
