--- a/app/components/screens/home/Intro/Intro.module.scss
+++ b/app/components/screens/home/Intro/Intro.module.scss
@@ -55,7 +55,7 @@
 
         &__header {
             display: flex;
-            justify-content: end;
+            justify-content: flex-end;
 
             p {
                 display: flex;
