--- a/app/components/screens/home/Intro/Intro.module.scss
+++ b/app/components/screens/home/Intro/Intro.module.scss
@@ -3,6 +3,11 @@
 .intro {
     width: 100%;
 
+    h1 {
+        opacity: 0;
+        font-size: 1;
+    }
+
     .loader {
         position: fixed;
         left: 0;
