--- a/app/components/screens/reviews/Intro/Intro.module.scss
+++ b/app/components/screens/reviews/Intro/Intro.module.scss
@@ -44,6 +44,7 @@
         }
 
         &__btn {
+            margin-top: 2rem;
             padding: .4rem 4rem;
             display: block;
             background-color: $black;
