--- a/app/components/screens/videoreviews/detail/Detail.module.scss
+++ b/app/components/screens/videoreviews/detail/Detail.module.scss
@@ -2,7 +2,7 @@
 
 .detail {
     padding: 100px 0;
-    background-color: $white;
+    background-color: $black;
 
     &__item {
         display: flex;
@@ -10,7 +10,7 @@
         gap: 20px;
 
         a {
-            color: $black;
+            color: $white;
             display: flex;
             align-items: center;
             gap: 5px;
@@ -23,79 +23,49 @@
         &__title {
             text-align: center;
             @include title;
-            color: $black;
+            color: $white;
         }
 
-        form {
-            margin: 2rem auto 0;
-            width: 70%;
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
+        &__video {
+            width: 80%;
+            height: 600px;
+            margin: 2rem auto;
+            background-color: $white;
+            padding: 3rem;
+        }
 
-            input,
-            textarea {
-                background-color: #F5F5F5;
-                border: 0;
-                padding: 1.2rem;
-                font-size: 1.1rem;
-
-                &::placeholder {
-                    font-size: 1.1rem;
-                    color: $black;
-                }
-            }
-
-            input {
-                flex: 1;
-            }
-
-            textarea {
-                width: 100%;
-                resize: none;
-            }
-
-            button {
-                margin: 2rem auto 0;
-                border: 2px solid $black;
-                background-color: $black;
-                color: $white;
-                @include content;
-                padding: .1rem 4rem;
-                transition: $transition;
-                cursor: pointer;
-
-                &:hover {
-                    background-color: $white;
-                    color: $black;
-                }
-            }
+        iframe {
+            width: 100%;
+            height: 100%;
         }
     }
 }
-
 
 @media only screen and (max-width: 991px) {
     .detail {
         padding: 50px 0;
 
         &__item {
-            form {
-                margin: 1rem auto 0;
+
+            &__video {
                 width: 100%;
+                padding: 1rem;
+                height: 500px;
+            }
+        }
+    }
+}
 
-                input,
-                textarea {
-                    font-size: 1rem;
+@media only screen and (max-width: 767px) {
+    .detail {
+        padding: 50px 0;
 
-                    &::placeholder {
-                        font-size: 1rem;
-                    }
-                }
+        &__item {
 
-                button {
-                    margin: 1rem auto 0;
-                }
+            &__video {
+                width: 100%;
+                padding: 1rem;
+                height: 400px;
             }
         }
     }
