--- a/app/components/screens/videoreviews/Intro/Intro.module.scss
+++ b/app/components/screens/videoreviews/Intro/Intro.module.scss
@@ -63,6 +63,10 @@
                 &__item {
                     width: 100%;
                     padding: 1rem;
+
+                    img {
+                        height: 300px;
+                    }
                 }
             }
         }
