--- a/app/components/screens/catalog/Intro/Intro.module.scss
+++ b/app/components/screens/catalog/Intro/Intro.module.scss
@@ -1,30 +1,46 @@
 @import "../../../../assets/variables";
 
+.intro {
+    padding: 100px 0;
 
-.pagination {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    &__item {
+        &__title{
+            text-align: center;
+            @include title;
+            margin: 0 0 2rem;
+        }
+        .pagination {
+            margin-top: 2rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
 
-    .el {
-        width: 40px;
-        height: 40px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: $gray;
-        font-weight: 600;
-        cursor: pointer;
-        transition: $transition;
+            .el {
+                width: 40px;
+                height: 40px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: $gray;
+                font-weight: 600;
+                cursor: pointer;
+                transition: $transition;
 
-        &:hover {
-            background-color: $black;
-            color: $white;
+                &:hover {
+                    background-color: $black;
+                    color: $white;
+                }
+            }
         }
     }
 }
+@media only screen and (max-width: 991px){
+    .intro{
+        padding: 50px 0;
+    }
+}
 
-.btn{
+.btn {
     background-color: $black;
 }
 
