--- a/app/components/screens/reviews/Intro/Intro.module.scss
+++ b/app/components/screens/reviews/Intro/Intro.module.scss
@@ -33,7 +33,7 @@
 
                 &__left {
                     display: flex;
-                    align-items: start;
+                    align-items: flex-start;
                     gap: 1rem;
                 }
 
