--- a/app/components/screens/home/Intro/Intro.module.scss
+++ b/app/components/screens/home/Intro/Intro.module.scss
@@ -205,6 +205,32 @@
             display: flex;
             justify-content: center;
             gap: 5px;
+
+
+            .swiper-pagination-bullet {
+                background-color: white; 
+                width: 10px;
+                height: 10px;
+                border-radius: 50%;
+                cursor: pointer;
+            }
+
+            .swiper-pagination-bullet-active {
+                position: relative;
+
+                &::before {
+                    content: '';
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    width: 20px;
+                    height: 20px;
+                    border-radius: 50%;
+                    background-color: transparent;
+                    border: 1px solid white; 
+                }
+            }
         }
 
         strong {
