--- a/app/components/layout/header/Header.module.scss
+++ b/app/components/layout/header/Header.module.scss
@@ -88,6 +88,22 @@
             a {
                 color: $white;
                 margin-right: 15px;
+                position: relative;
+
+                span {
+                    position: absolute;
+                    top: -8px;
+                    right: -8px;
+                    width: 20px;
+                    height: 20px;
+                    border-radius: 50%;
+                    background-color: $red;
+                    color: $white;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    font-size: .8rem;
+                }
             }
 
             &__tel {
@@ -364,6 +380,22 @@
 
                 a {
                     color: $white;
+                    position: relative;
+
+                    span {
+                        position: absolute;
+                        top: -8px;
+                        right: -8px;
+                        width: 20px;
+                        height: 20px;
+                        border-radius: 50%;
+                        background-color: $red;
+                        color: $white;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        font-size: .8rem;
+                    }
                 }
 
                 &__tel {
