--- a/app/components/screens/catalog/Detail/Detail.module.scss
+++ b/app/components/screens/catalog/Detail/Detail.module.scss
@@ -182,6 +182,16 @@
     border: 3px solid $black !important;
 }
 
+.disabled {
+    opacity: .5;
+    cursor: not-allowed !important;
+
+    &:hover {
+        background-color: $black !important;
+        color: $white !important;
+    }
+}
+
 @media only screen and (max-width: 991px) {
     .detail {
         &__items {
