--- a/app/components/screens/Cart/Cart.module.scss
+++ b/app/components/screens/Cart/Cart.module.scss
@@ -183,6 +183,46 @@
                     }
                 }
             }
+
+            .formContainer {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+                padding: .5rem;
+
+                &__back {
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+                    cursor: pointer;
+                }
+
+                input {
+                    width: 100%;
+                    height: 50px;
+                    border: 2px solid $black;
+                    font-size: 1.2rem;
+                }
+
+                button {
+                    width: 100%;
+                    height: 50px;
+                    border: 0;
+                    background-color: $black;
+                    color: $white;
+                    font-size: 1.2rem;
+                    font-weight: 500;
+                    cursor: pointer;
+                    transition: $transition;
+                    border: 2px solid $black;
+
+                    &:hover {
+                        background-color: $white;
+                        color: $black;
+                    }
+                }
+            }
         }
     }
 }
